--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+.app-container{
+  background-color: rgb(77, 73, 73);
+  /* text-align: center; */
+  padding:20px;
+}
+.about-container{
+
+  color:whitesmoke
+}
+.skill-list-container{
+  display:flex;
+  flex-wrap: wrap;
+}
+
+
+.skill-container{
+  display:flex;
+  background-color: white;
+  margin:20px 20px;
+  width:120px;
+  height:40px;
+  border-radius:8px
+
+}
+
+.skill-image img{
+width:30px;
+height:30px;
+object-fit: contain;
+margin:5px
+}
+.skill-name{
+  margin-top:8px
+}
+
+.project-container img{
+width:400px;
+height:400px;
+border-bottom:2px solid white
+}
+.project-container{
+  width:400px;
+  border:2px solid white;
+  margin-bottom:30px
+}
+.project-description{
+  /* display: flex; */
+  padding: 0px 10px;
+}
+.project-description p{
+color:whitesmoke
+}
+
+.project-container button{
+  border:none;
+border-radius:10px;
+padding:5px;
+background-color: green;
+margin:5px 10px
+}
+.project-container button:hover{
+  cursor:pointer;
+  box-shadow: 1px 1px 1px 1px rgb(139, 241, 139);
+}
+
+
+.personal-container{
+  color:white;
+}
+.bold{
+  font-weight: bold;
+ 
+}
+
+.resume-container{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.resume-container button{
+  font-size: 20px;
+  border: none;
+  background-color: green;
+  border-radius:10px;
+  padding:10px 30px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.resume-container button:hover{
+  cursor: pointer;
+  box-shadow: 1px 1px 1px 1px rgb(131, 228, 131);
 }
