--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
 .app-container{
-  background-color: rgb(77, 73, 73);
-  /* text-align: center; */
+
+  background-image: url("https://th.bing.com/th/id/R.60097d2b25c0ccc2b17f215d0399e43b?rik=75QmkxHJyAbkow&riu=http%3a%2f%2f1024x.net%2fwallpapers%2f65i%2fBullrot_Wear_Background.jpg&ehk=0swqyV0slIXCFptTrHAUsRsu29LUiRLv7PASbdQu%2byA%3d&risl=&pid=ImgRaw&r=0");
+
   padding:20px;
 }
 .about-container{
 
-  color:whitesmoke
+  color:whitesmoke;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  line-height: 1.7;
+}
+
+.heading{
+  color: aqua;
+}
+.sub-heading-c1{
+  color:aqua;
+  font-size: 20px;
+  
+}
+.sub-heading-c2{
+color: rgb(166, 240, 240);
+font-family:cursive ;
+font-size:18px;
 }
 .skill-list-container{
   display:flex;
@@ -17,7 +34,7 @@
   display:flex;
   background-color: white;
   margin:20px 20px;
-  width:120px;
+  width:140px;
   height:40px;
   border-radius:8px
 
@@ -30,8 +47,11 @@ object-fit: contain;
 margin:5px
 }
 .skill-name{
-  margin-top:8px
+  margin-top:8px;
+  font-family: cursive;
 }
+
+
 
 .project-container img{
 width:400px;
@@ -44,8 +64,9 @@ border-bottom:2px solid white
   margin-bottom:30px
 }
 .project-description{
-  /* display: flex; */
   padding: 0px 10px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  line-height:1.5;
 }
 .project-description p{
 color:whitesmoke
@@ -55,12 +76,13 @@ color:whitesmoke
   border:none;
 border-radius:10px;
 padding:5px;
-background-color: green;
+background-color: rgb(33, 248, 33);
 margin:5px 10px
 }
+
 .project-container button:hover{
   cursor:pointer;
-  box-shadow: 1px 1px 1px 1px rgb(139, 241, 139);
+  box-shadow: 1px 1px 5px 3px rgb(238, 126, 106);
 }
 
 
@@ -79,12 +101,12 @@ margin:5px 10px
 .resume-container button{
   font-size: 20px;
   border: none;
-  background-color: green;
+  background-color: rgb(11, 245, 11);
   border-radius:10px;
   padding:10px 30px;
 
 }
 .resume-container button:hover{
   cursor: pointer;
-  box-shadow: 1px 1px 1px 1px rgb(131, 228, 131);
+  box-shadow: 1px 1px 10px 3px rgb(240, 58, 26);
 }
