--- a/src/App.css
+++ b/src/App.css
@@ -54,12 +54,12 @@ margin:5px
 
 
 .project-container img{
-width:400px;
+width:100%;
 height:400px;
 border-bottom:2px solid white
 }
 .project-container{
-  width:400px;
+  width:35%;
   border:2px solid white;
   margin-bottom:30px
 }
